<resources>
    <string name="app_name">KeyoneKB</string>
    <string name="btn_settings">Настройки</string>
    <string name="btn_test_key">Тест кнопок</string>
    <string name="keyboard_test_input_hint">"Press any button to see it's code"</string>
    <string name="keyboard_test_show_scancode">Show scan code</string>
    <string name="keyboard_test_scancode_title">Scan Code</string>
    <string name="keyboard_test_code_title">Android KeyCode</string>
    <string name="pref_key_keyboard_test">Тест клавиатуры</string>
    <string name="btn_tlt_settings">Настройки Text Layout Tools</string>
    <string name="pref_header_languages">Язык Ввода</string>
    <string name="pref_h2_input_type">Ввод</string>
    <string name="setting_input_method" translatable="false">Setting_Input_Method</string>
    <string name="pref_title_input_method">Метод ввода</string>
    <string-array name="pref_input_method_titles">
        <item>йцукен</item>
        <item>translit</item>
        <item>USB-клавиатура</item>
        <item>qwertz</item>
        <item>F(x)tec Pro1</item>
    </string-array>
    <string-array name="pref_input_method_values">
        <item>Qwerty</item>
        <item>Translit</item>
        <item>UsbKb</item>
        <item>Qwertz</item>
        <item>FxtecPro1</item>
    </string-array>
    <string name="pref_title_keyboard_input_settings">Открыть Настройки Ввода</string>
    <string name="pref_header_shortcut">Быстрая Клавиша</string>
    <string name="pref_h2_shortcut">Комбинация Клавиш</string>
    <string name="pref_h2_text_selection">Выделение</string>
    <string name="setting_shortcut_enabled_key" translatable="false">Setting_Enabled</string>
    <string name="setting_is_replace_alt_enter" translatable="false">Setting_Replace_Alt_Enter</string>
    <string name="setting_control_key" translatable="false">Setting_Control</string>
    <string name="setting_shortcut_key" translatable="false">Setting_Shortcut</string>
    <string name="setting_select_replaced" translatable="false">Setting_Select_Replaced</string>
    <string name="pref_description_shortcut_enabled">Смена раскладки при нажатии Ctrl+&lt;key&gt;</string>
    <string name="pref_title_shortcut_enabled">Переключение по комбинации клавиш</string>
    <string name="pref_description_is_replace_alt_enter">Смена раскладки при нажатии Alt+Enter (со сменой яыка)</string>
    <string name="pref_title_is_replace_alt_enter">Переключение по Alt+Enter</string>
    <string name="pref_title_control_key">Клавиша Ctrl</string>
    <string-array name="pref_control_key_titles">
        <item>Right Shift</item>
        <item>Left Shift</item>
        <item>Sym</item>
        <item>Speed Key (Key2)</item>
        <item>Currency Key (Key2)</item>
        <item>Ctrl (USB-клавиатура)</item>
    </string-array>
    <string-array name="pref_control_key_values">
        <item>129</item>
        <item>65</item>
        <item>4</item>
        <item>8</item>
        <item>12288</item>
        <item>12288</item>
    </string-array>
    <string name="pref_title_shortcut">Быстрая Клавиша</string>
    <string-array name="pref_shortcut_titles">
        <item>Q</item>
        <item>Y</item>
        <item>U</item>
        <item>I</item>
        <item>O</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>0</item>
        <item>$</item>
    </string-array>
    <string-array name="pref_shortcut_values">
        <item>45</item>
        <item>53</item>
        <item>49</item>
        <item>37</item>
        <item>43</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>7</item>
        <item>11</item>
    </string-array>
    <string name="pref_title_system_accessibility_settings">Открыть Специальные Возможности</string>
    <string name="pref_title_select_replaced">Выделять заменённый текст</string>
    <string name="pref_description_select_replaced">Выделять заменённый текст в поле ввода после смены раскладки</string>
    <string name="text_btn_mute_enable">Включить</string>
    <string name="text_btn_mute_switch">Звук</string>
    <string name="text_btn_autocorrect_switch">Автозамена</string>
    <string name="text_btn_manual_change_switch">Ctrl+Q</string>
    <string name="text_btn_off_switch">Откл.</string>
    <string name="text_btn_on_check" translatable="false">☑</string>
    <string name="text_btn_off_check" translatable="false">☐</string>
    <string name="text_toast_mute_general">Звук отключён до</string>
    <string name="text_toast_mute_enable">Звук включён</string>
    <string name="text_toast_mute_disable">Звук отключён</string>
    <string name="text_toast_autocorrect_enabled">Автоисправление включено</string>
    <string name="text_toast_autocorrect_disabled">Автоисправление выключено</string>
    <string name="text_toast_manual_change_enabled">Ручное исправление включено</string>
    <string name="text_toast_manual_change_disabled">Ручное исправление выключено</string>
    <string name="text_toast_word_added">Слово добавлено</string>
    <string name="text_toast_word_in_dict_already">Слово уже в словаре</string>
    <string name="text_toast_word_promoted_to_dict_format">Вы исправили \'%s\' %d раза. Слово добавлено в словарь</string>
    <string name="notification_text_update_available">Доступно обновление</string>
    <string name="notification_text_update_available_desc">Коснитесь, чтобы скачать</string>
    <string name="setting_corrections" translatable="false">Setting_Corrections</string>
    <string name="pref_header_corrections">Слова-Исключения</string>
    <string name="dialog_ok">Сохранить</string>
    <string name="dialog_cancel">Отменить</string>
    <string name="dialog_error_empty_input">Поле не должно быть пустым</string>
    <string name="dialog_delete_title">Действительно удалить?</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
    <string name="pref_header_autocorrect">Автоисправление</string>
    <string name="pref_h2_autocorrect">Автоматическое Исправление</string>
    <string name="setting_is_auto_correct" translatable="false">Setting_Auto_Correct</string>
    <string name="pref_description_is_auto_correct">Автоматически исправлять раскладку последнего введённого слова</string>
    <string name="pref_title_is_auto_correct">Автоматически исправлять раскладку</string>
    <string name="setting_user_dictionary" translatable="false">Setting_User_Dictionary</string>
    <string name="setting_user_temp_dictionary" translatable="false">Setting_User_Temp_Dictionary</string>
    <string name="pref_description_user_dictionary">Одно слово на строке</string>
    <string name="pref_title_user_dictionary">Пользовательский словарь</string>
    <string name="pref_user_dictionary_default_value">Привет\nМир</string>
    <string name="setting_autocorrect_direction" translatable="false">Setting_Autocorrect_Direction</string>
    <string name="pref_title_autocorrect_direction">Разрешить автоисправление</string>
    <string-array name="pref_autocorrect_direction_key_titles">
        <item>В обеих раскладках</item>
        <item>В русской раскладке</item>
        <item>В английской раскладке</item>
    </string-array>
    <string-array name="pref_autocorrect_direction_key_values">
        <item>Unknown</item>
        <item>Ru</item>
        <item>En</item>
    </string-array>
    <string name="pref_header_application">Настройки Приложения</string>
    <string name="pref_h2_application_updates">Обновления</string>
    <string name="pref_title_application_updates_check">Проверять на наличие обновлений</string>
    <string name="setting_application_updates_check" translatable="false">Setting_Application_Updates_Check</string>
    <string-array name="pref_updates_check_titles">
        <item>Wi-Fi и мобильный интернет</item>
        <item>Только Wi-Fi</item>
        <item>Отключено</item>
    </string-array>
    <string-array name="pref_updates_check_values">
        <item>Any</item>
        <item>WiFi</item>
        <item>None</item>
    </string-array>
    <string name="pref_description_application_updates_check">Проверить вручную можно на экране \'О программе\'</string>
    <string name="setting_application_updates_available_ver" translatable="false">Setting_Application_Updates_Available_Ver</string>
    <string name="setting_application_updates_link" translatable="false">Setting_Application_Updates_Link</string>
    <string name="pref_header_notification">Индикация Событий</string>
    <string name="pref_h2_sound">Звук</string>
    <string name="pref_h2_vibration">Вибрация</string>
    <string name="setting_is_sound_enabled" translatable="false">Setting_Is_Sound_Enabled</string>
    <string name="pref_title_sound_enabled">Звук переключения</string>
    <string name="setting_vibration_pattern_rus" translatable="false">Setting_Vibration_Pattern_Rus</string>
    <string name="pref_title_vibration_pattern_rus">Переключение на русский</string>
    <string-array name="pref_vibration_pattern_key_titles">
        <item>Нет</item>
        <item>Одиночная короткая</item>
        <item>Одиночная</item>
        <item>Одиночная длинная</item>
        <item>Двойная короткая</item>
        <item>Двойная</item>
        <item>Тройная короткая</item>
        <item>Тройная</item>
        <item>Длинный-короткий</item>
    </string-array>
    <string-array name="pref_vibration_pattern_key_values">
        <item>None</item>
        <item>SingleShort</item>
        <item>Single</item>
        <item>SingleLong</item>
        <item>DoubleShort</item>
        <item>Double</item>
        <item>TripleShort</item>
        <item>Triple</item>
        <item>ShortLong</item>
    </string-array>
    <string name="setting_vibration_pattern_eng" translatable="false">Setting_Vibration_Pattern_Eng</string>
    <string name="pref_title_vibration_pattern_eng">Переключение на английский</string>
    <string name="setting_sound_input_rus" translatable="false">Setting_Sound_Input_Rus</string>
    <string name="pref_title_sound_input_rus">Смена языка ввода на русский</string>
    <string-array name="pref_sound_key_titles">
        <item>Нет</item>
        <item>Английская буква</item>
        <item>Русская буква</item>
        <item>Переключение</item>
        <item>Замена</item>
        <item>Опечатка</item>
        <item>Клик XP</item>
        <item>Восклицание</item>
        <item>Стоп</item>
    </string-array>
    <string name="pref_header_experimental">Экспериментальные</string>
    <string name="pref_h2_ctrl_emulation">Эмуляция Ctrl</string>
    <string name="pref_h2_logging">Логирование</string>
    <string name="setting_is_show_info" translatable="false">Setting_Show_Info</string>
    <string name="pref_description_is_show_info">Показывать информацию о нажатой клавише</string>
    <string name="pref_title_is_show_info">Показывать информацию</string>
    <string name="setting_key2emulation_enabled" translatable="false">Setting_Key2Emulation_Enabled</string>
    <string name="pref_description_key2emulation_enabled">Включить эмуляцию действий Ctrl+A/C/V/X на выбранной клавише Ctrl</string>
    <string name="pref_title_key2emulation_enabled">Включить эмуляцию Ctrl (Только для Key2)</string>
    <string name="setting_is_log_to_sd" translatable="false">Setting_Auto_Log_To_SD</string>
    <string name="pref_description_is_log_to_sd">Записывать логи событий в файл \'TextLayoutTools\\tlt_log.txt\' во внутренней памяти. Необхожимо предоставить разрешение на запись в Память и USB.\nВНИМАНИЕ! В файле будет содержаться введённый текст.</string>
    <string name="pref_title_is_log_to_sd">Записывать логи событий в файл</string>
    <string name="setting_open_app_settings">Открыть настройки приложения</string>
    <string name="pref_header_backup">Резервное Копирование</string>
</resources>