<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="by.mkr.blackberry.textlayouttools.SettingsActivity$ApplicationPreferenceFragment"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/pref_header_application" />

    <header
        android:fragment="by.mkr.blackberry.textlayouttools.SettingsActivity$ShortcutPreferenceFragment"
        android:icon="@drawable/ic_keyboard_google_24dp"
        android:title="@string/pref_header_shortcut" />

    <header
        android:fragment="by.mkr.blackberry.textlayouttools.SettingsActivity$AutocorrectPreferenceFragment"
        android:icon="@drawable/ic_g_translate_24dp"
        android:title="@string/pref_header_autocorrect" />

    <header
        android:icon="@drawable/ic_sync_24dp"
        android:title="@string/pref_header_corrections" >
        <intent android:targetPackage="com.sateda.keyonekb"
            android:targetClass="by.mkr.blackberry.textlayouttools.CorrectionsActivity"/>
    </header>

    <header
        android:fragment="by.mkr.blackberry.textlayouttools.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_active_24dp"
        android:title="@string/pref_header_notification" />

    <header
        android:fragment="by.mkr.blackberry.textlayouttools.SettingsActivity$BackupPreferenceFragment"
        android:icon="@drawable/ic_backup_24dp"
        android:title="@string/pref_header_backup" />

    <header
        android:fragment="by.mkr.blackberry.textlayouttools.SettingsActivity$ExperimentalPreferenceFragment"
        android:icon="@drawable/ic_extension_24dp"
        android:title="@string/pref_header_experimental" />

</preference-headers>
